--- a/XmlNavigation/XmlNavigation.csproj
+++ b/XmlNavigation/XmlNavigation.csproj
@@ -2,6 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Title>XML Navigation</Title>
+    <VersionPrefix>0.1.0</VersionPrefix>
+    <Authors>Oscar_Marcusson</Authors>
+    <RepositoryUrl>https://github.com/OscarMarcusson/XmlNavigation</RepositoryUrl>
   </PropertyGroup>
 
 </Project>
