--- a/XmlTree/XmlTree.csproj
+++ b/XmlTree/XmlTree.csproj
@@ -7,6 +7,19 @@
     <VersionPrefix>0.1.10</VersionPrefix>
     <Authors>Oscar_Marcusson</Authors>
     <RepositoryUrl>https://github.com/OscarMarcusson/XmlNavigation</RepositoryUrl>
+    <PackageIcon>XmlTree_main_icon.png</PackageIcon>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\Icons\XmlTree_main_icon.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
