--- a/XmlTree/XmlTree.csproj
+++ b/XmlTree/XmlTree.csproj
@@ -9,6 +9,7 @@
     <RepositoryUrl>https://github.com/OscarMarcusson/XmlNavigation</RepositoryUrl>
     <PackageIcon>XmlTree_main_icon.png</PackageIcon>
     <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
